--- a/batteryMonitor/app/build.gradle
+++ b/batteryMonitor/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "com.opencsv:opencsv:4.0"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.1-1'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.7.1-2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.7.1'
 }
